# art-e-nano

./: .env.sample  .gitignore  README.md  SETUP.md  pyproject.toml
art_e/: email_search_tools.py  project_types.py  rollout.py  train.py
art_e/data/: local_email_db.py  query_iterators.py  types_enron.py
art_e/evaluate/: benchmark.py  benchmark_prompted_models.py
scripts/: preflight_check.py
