[project]
name = "art-e-nano"
version = "0.1.0"
description = "ART-E (メール検索エージェント) を W&B Serverless RL で学習する軽量ハンズオン"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpipe-art>=0.5.18",
    "datasets>=3.4.1",
    "langchain-core>=0.3.51",
    "openai>=1.60.0",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "wandb>=0.27.2",
    "weave>=0.52.42",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["art_e*"]
